--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -2,21 +2,37 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE ='apache-php-docker'
-        TAG = "${BUILD_NUMBER}"
-        CONTAINER_NAME = "test_apache_container"
+        // Nombre de la imagen de Docker
+        DOCKER_IMAGE = "apache-php-docker"  
+        
+        // Tag de la imagen basado en el número de build de Jenkins
+        TAG = "${BUILD_NUMBER}"             
+
+        // Nombre del contenedor
+        CONTAINER_NAME = "apache_php_app"    
+
+        // Nombre de usuario de DockerHub (reemplazar por tu propio usuario de DockerHub)
+        DOCKERHUB_USER = "alexandracoder"   
+
+        // Credenciales de DockerHub almacenadas en Jenkins
+        DOCKERHUB_CREDENTIALS = 'dockerhub-creds-id'  
+
+        // Credenciales de GitHub almacenadas en Jenkins
+        GITHUB_CREDENTIALS = 'github-token'  
     }
 
     stages {
         stage('Checkout') {
             steps {
-                git credentialsId: 'github-token', url: 'https://github.com/Alexandracoder/apache.git'
+                // Clonar el repositorio de GitHub
+                git credentialsId: "${GITHUB_CREDENTIALS}", url: 'https://github.com/Alexandracoder/apache.git'
             }
         }
 
         stage('Docker Build') {
             steps {
                 script {
+                    // Construir la imagen de Docker con un tag único basado en el número de build
                     sh "docker build -t ${DOCKER_IMAGE}:${TAG} ."
                 }
             }
@@ -25,16 +41,16 @@ pipeline {
         stage('Test Docker Image') {
             steps {
                 script {
-                    // Ejecutar contenedor en segundo plano
+                    // Ejecutar el contenedor en segundo plano
                     sh "docker run -d --rm --name ${CONTAINER_NAME} -p 8080:8080 ${DOCKER_IMAGE}:${TAG}"
                     
-                    // Esperar unos segundos a que Apache levante
+                    // Esperar unos segundos para asegurarse de que Apache se haya levantado
                     sh "sleep 5"
 
-                    // Probar si el servidor responde
+                    // Hacer una prueba de que el servidor está respondiendo correctamente
                     sh "curl -f http://localhost:8080"
 
-                    // Detener contenedor
+                    // Detener el contenedor después de la prueba
                     sh "docker stop ${CONTAINER_NAME}"
                 }
             }
@@ -43,6 +59,7 @@ pipeline {
         stage('Tag Docker Image') {
             steps {
                 script {
+                    // Etiquetar la imagen con el tag 'latest'
                     sh "docker tag ${DOCKER_IMAGE}:${TAG} ${DOCKER_IMAGE}:latest"
                 }
             }
@@ -51,9 +68,12 @@ pipeline {
         stage('Push to DockerHub') {
             steps {
                 script {
-                    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-creds-id') {
-                        sh "docker push ${DOCKER_IMAGE}:${TAG}"
-                        sh "docker push ${DOCKER_IMAGE}:latest"
+                    // Iniciar sesión en DockerHub con las credenciales proporcionadas
+                    docker.withRegistry('https://index.docker.io/v1/', "${DOCKERHUB_CREDENTIALS}") {
+                        // Empujar la imagen a DockerHub con el tag específico
+                        sh "docker push ${DOCKERHUB_USER}/${DOCKER_IMAGE}:${TAG}"
+                        // Empujar también la versión 'latest' a DockerHub
+                        sh "docker push ${DOCKERHUB_USER}/${DOCKER_IMAGE}:latest"
                     }
                 }
             }
