--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -1,10 +1,66 @@
 pipeline {
     agent any
-stages {
-        stage('Hello') {
+
+    environment {
+        DOCKER_IMAGE = 'apache-php-docker'
+        TAG = "${BUILD_NUMBER}"
+        CONTAINER_NAME = "test_apache_container"
+    }
+
+    stages {
+        stage('Checkout') {
             steps {
-                    echo 'Hello, World!' This is my first Jenkins pipeline script.
+                // Checkout the code from GitHub repository
+                git credentialsId: 'github-token', branch: 'main', url: 'https://github.com/Alexandracoder/apache.git'
+            }
+        }
+
+        stage('Docker Build') {
+            steps {
+                script {
+                    // Build the Docker image
+                    sh "docker build -t ${DOCKER_IMAGE}:${TAG} ."
                 }
             }
+        }
+
+        stage('Test Docker Image') {
+            steps {
+                script {
+                    // Run the Docker container in detached mode
+                    sh "docker run -d --rm --name ${CONTAINER_NAME} -p 8080:8080 ${DOCKER_IMAGE}:${TAG}"
+
+                    // Wait a few seconds for Apache to start
+                    sh "sleep 5"
+
+                    // Test if the server responds
+                    sh "curl -f http://localhost:8080 || exit 1"
+
+                    // Stop the Docker container
+                    sh "docker stop ${CONTAINER_NAME}"
                 }
             }
+        }
+
+        stage('Tag Docker Image') {
+            steps {
+                script {
+                    // Tag the Docker image with "latest"
+                    sh "docker tag ${DOCKER_IMAGE}:${TAG} ${DOCKER_IMAGE}:latest"
+                }
+            }
+        }
+
+        stage('Push to DockerHub') {
+            steps {
+                script {
+                    // Push the Docker images to DockerHub
+                    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-creds-id') {
+                        sh "docker push ${DOCKER_IMAGE}:${TAG}"
+                        sh "docker push ${DOCKER_IMAGE}:latest"
+                    }
+                }
+            }
+        }
+    }
+}
