--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -1,10 +1,77 @@
 pipeline {
     agent any
+
+    environment {
+        DOCKER_IMAGE = 'alexandracoder/apache-php-docker'
+        TAG = "${BUILD_NUMBER}"
+        CONTAINER_NAME = "test_apache_container"
+    }
+
     stages {
-        stage ('Hello') {
+        stage('Checkout') {
             steps {
-                echo 'Hello, world! This is my first pipeline script.'
+                git credentialsId: 'github-token', url: 'https://github.com/Alexandracoder/apache.git'
             }
+        }
+
+        stage('Docker Build') {
+            steps {
+                script {
+                    sh "docker build -t ${DOCKER_IMAGE}:${TAG} ."
+                }
+            }
+        }
+
+        stage('Test Docker Image') {
+            steps {
+                script {
+                    sh "docker run -d --rm --name ${CONTAINER_NAME} -p 8080:80 ${DOCKER_IMAGE}:${TAG}"
+                    sh "sleep 5"
+                    sh "curl -f http://localhost:8080"
+                    sh "docker stop ${CONTAINER_NAME}"
+                }
+            }
+        }
+
+        stage('Tag Docker Image') {
+            steps {
+                script {
+                    sh "docker tag ${DOCKER_IMAGE}:${TAG} ${DOCKER_IMAGE}:latest"
+                }
+            }
+        }
+
+        stage('Push to DockerHub') {
+            steps {
+                script {
+                    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-creds-id') {
+                        sh "docker push ${DOCKER_IMAGE}:${TAG}"
+                        sh "docker push ${DOCKER_IMAGE}:latest"
+                    }
+                }
+            }
+        }
+
+        stage('Notify Success') {
+            steps {
+                echo "✅ Build and push completed successfully!"
+            }
+        }
+
+        stage('Cleanup') {
+            steps {
+                script {
+                    echo "🧹 Cleaning up old Docker images..."
+                    // Optional cleanup, comment out if not desired
+                    sh "docker image prune -f"
+                }
+            }
+        }
+    }
+
+    post {
+        failure {
+            echo "❌ The pipeline failed. Please check the logs."
         }
     }
 }
