--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -10,7 +10,8 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git credentialsId: 'github-token', url: 'https://github.com/Alexandracoder/apache.git'
+                git credentialsId: 'github-token', url: 'https://github.com/Alexandracoder/apache.git', branch: 'main'
+            }
             }
         }
 
