--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Docker Build') {
             steps {
                 script {
-                    sh "docker build -t ${DOCKER_IMAGE}:${TAG} ."
+                    sh "docker build -t ${DOCKER_IMAGE}:${TAG}-f path/to apache-php-docker/Dockerfile."
                 }
             }
         }
