--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -17,7 +17,8 @@ pipeline {
         stage('Docker Build') {
             steps {
                 script {
-                    sh "docker build -t ${DOCKER_IMAGE}:${TAG}-f path/to apache-php-docker/Dockerfile."
+                  docker build -t alexandracoder/apache-php-docker:16 -f apache-php-docker/Dockerfile .
+
                 }
             }
         }
