--- a/apache-php-docker/Dockerfile
+++ b/apache-php-docker/Dockerfile
@@ -1,10 +1,16 @@
 FROM ubuntu:20.04
-ENV DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update && \
     apt-get install -y apache2 php libapache2-mod-php && \
     apt-get clean
-COPY COPY apache-php-docker/index.html /var/www/html/
+
+# Copiar el archivo index.html desde apache-php-docker al contenedor
+COPY apache-php-docker/index.html /var/www/html/
+
 EXPOSE 8080
+
+# Cambiar la configuración de Apache para usar el puerto 8080
 RUN sed -i 's/80/8080/g' /etc/apache2/ports.conf && \
     sed -i 's/80/8080/g' /etc/apache2/sites-available/000-default.conf
+
 CMD ["apachectl", "-D", "FOREGROUND"]
