--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Docker Build') {
             steps {
                 script {
-                    // Asegúrate de que la ruta al Dockerfile sea correcta
+                    // Ensure the Dockerfile path is correct
                     sh "docker build -t ${DOCKER_IMAGE}:${TAG} -f apache-php-docker/Dockerfile ."
                 }
             }
@@ -66,6 +66,27 @@ pipeline {
                     // Optional cleanup, comment out if not desired
                     sh "docker image prune -f"
                 }
+            }
+        }
+
+        stage('Find Free Port') {
+            steps {
+                script {
+                    // Try finding a free port using Python (more portable than netcat/lsof)
+                    def port = sh(
+                        script: "python3 -c \"import socket; s=socket.socket(); s.bind(('', 0)); print(s.getsockname()[1]); s.close()\"",
+                        returnStdout: true
+                    ).trim()
+
+                    env.HOST_PORT = port
+                    echo "Using dynamic port: ${env.HOST_PORT}"
+                }
+            }
+        }
+
+        stage('Run Docker Container') {
+            steps {
+                sh "docker run -d --rm --name ${CONTAINER_NAME} -p ${HOST_PORT}:80 ${DOCKER_IMAGE}:${TAG}"
             }
         }
     }
