--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -23,14 +23,19 @@ pipeline {
             }
         }
 
-        stage('Test Docker Image') {
-            steps {
-                script {
-                   docker run -d --rm --name test_apache_container -p 8081:80 ${DOCKER_IMAGE}:${TAG}
+       stage('Test Docker Image') {
+    steps {
+        script {
+            // Run the Docker container on a dynamic port or chosen port
+            sh "docker run -d --rm --name ${CONTAINER_NAME} -p ${HOST_PORT}:80 ${DOCKER_IMAGE}:${TAG}"
+            sh "sleep 5"  // Wait for the container to start
+            // Use the dynamic port in the curl command
+            sh "curl -f http://localhost:${HOST_PORT}"
+            sh "docker stop ${CONTAINER_NAME}"
+        }
+    }
+}
 
-                    sh "sleep 5"
-                    sh "curl -f http://localhost:8081"
-                    sh "docker stop ${CONTAINER_NAME}"
                 }
             }
         }
