--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -17,25 +17,21 @@ pipeline {
         stage('Docker Build') {
             steps {
                 script {
-                    // Ensure the Dockerfile path is correct
+                    // Asegúrate de que la ruta al Dockerfile sea correcta
                     sh "docker build -t ${DOCKER_IMAGE}:${TAG} -f apache-php-docker/Dockerfile ."
                 }
             }
         }
 
-       stage('Test Docker Image') {
-    steps {
-        script {
-            // Run the Docker container on a dynamic port or chosen port
-            sh "docker run -d --rm --name ${CONTAINER_NAME} -p ${HOST_PORT}:80 ${DOCKER_IMAGE}:${TAG}"
-            sh "sleep 5"  // Wait for the container to start
-            // Use the dynamic port in the curl command
-            sh "curl -f http://localhost:${HOST_PORT}"
-            sh "docker stop ${CONTAINER_NAME}"
-        }
-    }
-}
-
+        stage('Test Docker Image') {
+            steps {
+                script {
+                    // Run the Docker container on a dynamic port or chosen port
+                    sh "docker run -d --rm --name ${CONTAINER_NAME} -p ${HOST_PORT}:80 ${DOCKER_IMAGE}:${TAG}"
+                    sh "sleep 5"  // Wait for the container to start
+                    // Use the dynamic port in the curl command
+                    sh "curl -f http://localhost:${HOST_PORT}"
+                    sh "docker stop ${CONTAINER_NAME}"
                 }
             }
         }
@@ -72,27 +68,6 @@ pipeline {
                     // Optional cleanup, comment out if not desired
                     sh "docker image prune -f"
                 }
-            }
-        }
-
-        stage('Find Free Port') {
-            steps {
-                script {
-                    // Try finding a free port using Python (more portable than netcat/lsof)
-                    def port = sh(
-                        script: "python3 -c \"import socket; s=socket.socket(); s.bind(('', 0)); print(s.getsockname()[1]); s.close()\"",
-                        returnStdout: true
-                    ).trim()
-
-                    env.HOST_PORT = port
-                    echo "Using dynamic port: ${env.HOST_PORT}"
-                }
-            }
-        }
-
-        stage('Run Docker Container') {
-            steps {
-                sh "docker run -d --rm --name ${CONTAINER_NAME} -p ${HOST_PORT}:80 ${DOCKER_IMAGE}:${TAG}"
             }
         }
     }
