--- a/apache-php-docker/Jenkinsfile
+++ b/apache-php-docker/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Docker Build') {
             steps {
                 script {
-                    // Asegúrate de que la ruta al Dockerfile sea correcta
+                    // Build the Docker image with the tag based on the build number
                     sh "docker build -t ${DOCKER_IMAGE}:${TAG} -f apache-php-docker/Dockerfile ."
                 }
             }
@@ -26,11 +26,13 @@ pipeline {
         stage('Test Docker Image') {
             steps {
                 script {
-                    // Run the Docker container on a dynamic port or chosen port
-                    sh "docker run -d --rm --name ${CONTAINER_NAME} -p ${HOST_PORT}:80 ${DOCKER_IMAGE}:${TAG}"
-                    sh "sleep 5"  // Wait for the container to start
-                    // Use the dynamic port in the curl command
-                    sh "curl -f http://localhost:${HOST_PORT}"
+                    // Run the Docker container on port 8080
+                    sh "docker run -d --rm --name ${CONTAINER_NAME} -p 8080:80 ${DOCKER_IMAGE}:${TAG}"
+                    // Wait for 5 seconds to ensure the container starts
+                    sh "sleep 5"
+                    // Test the Docker container with curl
+                    sh "curl -f http://localhost:8080"
+                    // Stop the container after testing
                     sh "docker stop ${CONTAINER_NAME}"
                 }
             }
@@ -39,6 +41,7 @@ pipeline {
         stage('Tag Docker Image') {
             steps {
                 script {
+                    // Tag the Docker image as 'latest'
                     sh "docker tag ${DOCKER_IMAGE}:${TAG} ${DOCKER_IMAGE}:latest"
                 }
             }
@@ -47,6 +50,7 @@ pipeline {
         stage('Push to DockerHub') {
             steps {
                 script {
+                    // Push the Docker image to DockerHub
                     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-creds-id') {
                         sh "docker push ${DOCKER_IMAGE}:${TAG}"
                         sh "docker push ${DOCKER_IMAGE}:latest"
@@ -65,7 +69,7 @@ pipeline {
             steps {
                 script {
                     echo "🧹 Cleaning up old Docker images..."
-                    // Optional cleanup, comment out if not desired
+                    // Optional cleanup of old Docker images
                     sh "docker image prune -f"
                 }
             }
