--- a/apache-php-docker/Dockerfile
+++ b/apache-php-docker/Dockerfile
@@ -1,21 +1,26 @@
 FROM ubuntu:20.04
 
+# Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Etc/UTC
 
+# Install tzdata, Apache, PHP, and other dependencies
 RUN apt-get update && \
     apt-get install -y tzdata apache2 php libapache2-mod-php && \
     ln -fs /usr/share/zoneinfo/$TZ /etc/localtime && \
     dpkg-reconfigure --frontend noninteractive tzdata && \
     apt-get clean
 
-# Copiar el archivo index.html desde apache-php-docker al contenedor
+# Copy the index.html file into the container
 COPY apache-php-docker/index.html /var/www/html/
 
-EXPOSE 8080
+# Expose the port 81 for Apache
+EXPOSE 81
 
-# Cambiar la configuración de Apache para usar el puerto 8080
-RUN sed -i 's/81/8080/g' /etc/apache2/ports.conf && \
-    sed -i 's/81/8080/g' /etc/apache2/sites-available/000-default.conf
+# Modify Apache's configuration to use port 81 instead of port 80
+RUN sed -i 's/80/81/g' /etc/apache2/ports.conf && \
+    sed -i 's/80/81/g' /etc/apache2/sites-available/000-default.conf
 
+# Command to run Apache in the foreground
 CMD ["apachectl", "-D", "FOREGROUND"]
+
